# ahsah

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/: release.yml.bkp  test2.yml.bkp
.github/workflows/: publish.yml  release.yml  rust.yml
benches/: digest_benchmarks.rs
examples/: file-hasher.rs  reader-hasher.rs  stdin-hasher.rs  string-hasher.rs
notes/: sha256.tex
src/: buffer.rs  cli.rs  digest.rs  encoding.rs  hasher.rs  hashes.rs  io.rs  lib.rs  main.rs  md5.rs  sha256.rs  sha512.rs  traits.rs  utils.rs
src/algo/: md5.rs  mod.rs  sha256.rs  sha512.rs
src/algorithms/: md5.rs  mod.rs  sha2.rs  sha224.rs  sha256.rs  sha384.rs  sha512.rs  simd.rs
src/lib/: sha256.rs
tests/: ahsah-test.rs  compatibility_test.rs  hash-tests.rs  hash_test.rs  md5_test.rs  md5_tests.rs  sha224_test.rs  sha256_test.rs  sha256_tests.rs  sha384_test.rs  sha512_test.rs  sha512_tests.rs  streaming_test.rs
