[package]
name = "ahsah"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/mimanshu-maheshwari"]
default-run = "ahsah"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# libs
# [lib]
# name       = "sha256" 
# path       = "src/lib/sha256.rs"
# doc        = true
# crate-type = ["lib"]
# test = true

[[test]]
name = "hash_tests"
path = "tests/hash-tests.rs"

[[example]]
name = "string_hasher"
path = "examples/string-hasher.rs"

[[example]]
name = "stdin_hasher"
path = "examples/stdin-hasher.rs"

[[example]]
name = "file_hasher"
path = "examples/file-hasher.rs"

[dependencies]
