[package]
name = "ahsah"
version = "1.0.0"
edition = "2021"
authors = ["Mimanshu Maheshwari maheshwarimimanshu@gmail.com"]
description = "A library of hashing functions in rust"
repository = "https://github.com/mimanshu-maheshwari/ahsah"
homepage =  "https://github.com/mimanshu-maheshwari/ahsah"
license = "MIT OR Apache-2.0"
keywords = ["hash", "sha", "sha256", "sha512","crypto"]
categories = ["algorithms", "cryptography", "cryptography::cryptocurrencies", "encoding"]
exclude = ["/notes/**", "/docs/**"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

# libs
# [lib]
# name       = "sha256" 
# path       = "src/lib/sha256.rs"
# doc        = true
# crate-type = ["lib"]
# test = true

[[test]]
name = "sha256_test"
path = "tests/sha256_test.rs"

[[test]]
name = "sha512_test"
path = "tests/sha512_test.rs"

[[test]]
name = "md5_test"
path = "tests/md5_test.rs"


#[[example]]
#name = "string_hasher"
#path = "examples/string-hasher.rs"

#[[example]]
#name = "stdin_hasher"
#path = "examples/stdin-hasher.rs"

#[[example]]
#name = "file_hasher"
#path = "examples/file-hasher.rs"

#[[example]]
#name = "reader_hasher"
#path = "examples/reader-hasher.rs"

[[example]] 
name = "reader-hasher" 
required-features = ["args"]
path = "examples/reader-hasher.rs"

[features]
args = ["dep:clap"]

[dependencies]
clap = {version = "4.5.4", features = ["derive"], optional = true}

