[package]
name = "ahsah"
version = "2.1.0"
edition = "2021"
authors = ["Mimanshu Maheshwari maheshwarimimanshu@gmail.com"]
description = "Incremental hashing contexts for MD5 and SHA-2 with reader helpers and optional SIMD decode paths"
repository = "https://github.com/mimanshu-maheshwari/ahsah"
homepage = "https://github.com/mimanshu-maheshwari/ahsah"
license = "MIT OR Apache-2.0"
keywords = ["hash", "sha2", "md5", "sha256", "sha512"]
categories = [
  "algorithms",
  "cryptography",
  "cryptography::cryptocurrencies",
  "encoding",
]
exclude = ["/notes/**", "/docs/**"]

[[test]]
name = "sha256_test"
path = "tests/sha256_test.rs"

[[test]]
name = "sha512_test"
path = "tests/sha512_test.rs"

[[test]]
name = "md5_test"
path = "tests/md5_test.rs"

[[example]]
name = "string-hasher"
path = "examples/string-hasher.rs"

[[example]]
name = "stdin-hasher"
path = "examples/stdin-hasher.rs"

[[example]]
name = "file-hasher"
required-features = ["args"]
path = "examples/file-hasher.rs"

[[example]]
name = "reader-hasher"
required-features = ["args"]
path = "examples/reader-hasher.rs"

[[bench]]
name = "digest_benchmarks"
harness = false

[features]
args = ["dep:clap"]
simd = []

[dependencies]
clap = { version = "4.5.4", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.8"
